<resources>
    <string name="app_name">ProjectForAndroid</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!--抽屉菜单-->
    <string name="personal_star">个人收藏</string>
    <string name="personal_detail">个人资料</string>
    <string name="about_help">帮助/关于</string>
    <string name="setting">设置</string>

    <!--toolbar描述打开/关闭-->
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="personal">个人设置</string>

    <!--title-->
    <string name="frag_top">头条</string>
    <string name="frag_entertain">娱乐</string>
    <string name="frag_sport">体育</string>
    <string name="loading">加载中...</string>

    <!--请求方面的文字-->
    <string name="respon_error">还没有设置OnResponseListener！</string>
    <string name="net_with_empty_content">网络正常，但是查无此内容</string>
    <string name="respon_give_id">给传个频道id或者名称吧..</string>
    <string name="respon_nothing_to_know">发生了什么我也想不到的事情→_→</string>

    <!--basePopup-->
    <string name="popup_base_title">这是标题哦</string>
    <string name="popup_camera_title">请选择照片来源</string>
    <string name="popup_choose_from_camera">拍照</string>
    <string name="popup_choose_from_album">从图片库选择</string>
    <string name="popup_cancel">取消</string>
    <!--personaldetial-->
    <string name="nick">昵称</string>
    <string name="mail">邮箱</string>
    <string name="click_to_change_avatar">点击更换头像</string>
    <string name="man">男</string>
    <string name="half">中</string>
    <string name="girl">女</string>
    <string name="username_waring">不能超出10个字哦</string>
    <string name="email_error">邮箱格式错误哦</string>
    <!--Settings-->
    <string name="setting_nophotomode">无图浏览</string>
    <string name="setting_toast_restart">重启以看见效果</string>

    <!--About SharedPreference-->
    <string name="pre_name_setting">"settring"</string>
    <string name="pre_attr_name_text_size">"text_size"</string>
    <string name="pre_attr_textsize_big">"big"</string>
    <string name="pre_attr_textsize_normal">"normal"</string>
    <string name="pre_attr_textsize_small">"small"</string>


</resources>
