<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_drawer_menu"
    android:fitsSystemWindows="true"
    >
    <!-- 需要呈现的内容 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        >
        <RelativeLayout
            android:id="@+id/layout_wallpaper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.projectforandroid.widget.GeneralImageView
                android:id="@+id/personal_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_160"
                tools:src="@drawable/default_menu_bg"
                android:scaleType="centerCrop"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_160"
                android:background="@color/color_14000000"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20"
                android:layout_alignParentLeft="true"
                android:layout_alignBottom="@id/personal_wallpaper"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_8"
                />
            <ImageButton
                android:id="@+id/personal_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back2x"
                android:background="@null"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginLeft="@dimen/dp_16"
                />
        </RelativeLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatbutton"
            android:layout_width="@dimen/dp_56"
            android:layout_height="@dimen/dp_56"
            app:borderWidth="0dp"
            app:backgroundTint="@color/color_00acc1"
            android:src="@drawable/glass"
            android:layout_marginTop="-56dp"
            android:layout_below="@id/layout_wallpaper"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_16"
            />
        <!--昵称-->
        <RelativeLayout
            android:id="@+id/layout_nick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:layout_below="@id/floatbutton"
            android:layout_marginTop="@dimen/dp_16"
            >
            <ImageView
                android:id="@+id/icon_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_centerVertical="true"
                android:src="@drawable/usernamex2"
                />
            <LinearLayout
                android:id="@+id/nick_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_nick"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_16"
                >
            <EditText
                android:id="@+id/ed_nick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:selectAllOnFocus="true"
                android:background="@null"
                android:hint="@string/nick"
                android:textColorHint="@color/color_a5a5a5"
                android:textSize="@dimen/sp_12"
                />
            <View
                android:layout_width="@dimen/dp_200"
                android:layout_height="0.5dp"
                android:background="@color/colorPrimary"
               />
                <TextView
                    android:id="@+id/nick_over_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_8"
                    android:textColor="#f00"
                    android:text="@string/username_waring"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/nick_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/nick_input_layout"
                android:layout_centerVertical="true"
                android:textSize="@dimen/sp_10"
                android:textColor="@color/color_a5a5a5"
                android:layout_marginLeft="@dimen/dp_5"
                />
        </RelativeLayout>

        <!--更换头像-->
        <RelativeLayout
            android:id="@+id/layout_change_avatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:layout_below="@id/layout_nick"
            android:layout_marginTop="@dimen/dp_16"
            >
            <ImageView
                android:id="@+id/icon_change_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_centerVertical="true"
                android:src="@drawable/headerx2"
                />
            <com.projectforandroid.widget.CircleImageView
                android:id="@+id/avatar_change"
                android:layout_width="@dimen/dp_36"
                android:layout_height="@dimen/dp_36"
                android:layout_toRightOf="@id/icon_change_avatar"
                android:layout_marginLeft="@dimen/dp_16"
                tools:src="@drawable/default_avatar"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_toRightOf="@id/avatar_change"
                android:text="@string/click_to_change_avatar"
                android:textSize="@dimen/sp_14"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <!--选择性别-->
        <RelativeLayout
            android:id="@+id/layout_select_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:layout_below="@id/layout_change_avatar"
            android:layout_marginTop="@dimen/dp_16"
            >
            <ImageView
                android:id="@+id/icon_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_centerVertical="true"
                android:src="@drawable/sex"
                />
            <RadioGroup
                android:id="@+id/sex_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_toRightOf="@id/icon_sex"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_centerVertical="true"
                >
                <RadioButton
                    android:id="@+id/radio_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/radiobuttonselector"
                    android:paddingLeft="@dimen/dp_5"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/man"
                    android:drawableRight="@drawable/manx1"
                    />
                <RadioButton
                    android:id="@+id/radio_half"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/radiobuttonselector"
                    android:paddingLeft="@dimen/dp_5"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/half"
                    android:layout_marginLeft="@dimen/dp_26"
                    android:layout_marginRight="@dimen/dp_26"
                    android:drawableRight="@drawable/halfmanx1"
                    />
                <RadioButton
                    android:id="@+id/radio_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/radiobuttonselector"
                    android:paddingLeft="@dimen/dp_5"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/girl"
                    android:drawableRight="@drawable/womenx1"
                    />
            </RadioGroup>
        </RelativeLayout>
        <!--邮箱-->
        <RelativeLayout
            android:id="@+id/layout_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/dp_16"
            android:paddingRight="@dimen/dp_16"
            android:layout_below="@id/layout_select_sex"
            android:layout_marginTop="@dimen/dp_16"
            >
            <ImageView
                android:id="@+id/icon_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_centerVertical="true"
                android:src="@drawable/email2x"
                />
            <LinearLayout
                android:id="@+id/mail_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/icon_mail"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp_16"
                >
                <EditText
                    android:id="@+id/ed_mail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:selectAllOnFocus="true"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:hint="@string/mail"
                    android:textColorHint="@color/color_a5a5a5"
                    android:textSize="@dimen/sp_12"
                    />
                <View
                    android:layout_width="@dimen/dp_200"
                    android:layout_height="0.5dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:id="@+id/email_error_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/sp_8"
                    android:textColor="#f00"
                    android:text="@string/email_error"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    />
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigationview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/include_drawer_menu_header"
        app:menu="@menu/menu_drawer"
        />

</android.support.v4.widget.DrawerLayout>

